// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListTile matches snapshot when has a custom title 1`] = `
.css-1kgtu2h-Flex__root {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.css-8312sn-ListTile__root {
  display: inline-block;
}

.css-94tip-ListTile__withMargin {
  margin-bottom: calc(8px / 2);
}

.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.css-iempa9-Flex__item-Flex__equalSpan {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="css-8312sn-ListTile__root"
>
  <div
    className="css-1kgtu2h-Flex__root undefined"
  >
    <div
      className="css-iempa9-Flex__item-Flex__equalSpan"
      style={Object {}}
    >
      <div
        className="css-94tip-ListTile__withMargin"
      >
        <button
          className="css-qq01sn-Button__root"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListTile matches snapshot when has a subtitle 1`] = `
.css-1kgtu2h-Flex__root {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.css-8312sn-ListTile__root {
  display: inline-block;
}

.css-1wodq5h-ListTile__subtitle {
  color: #879ba6;
  font-size: 0.9rem;
}

.css-iempa9-Flex__item-Flex__equalSpan {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-rhrm0e-ListTile__title-ListTile__withMargin {
  color: #172b4e;
  margin-bottom: calc(8px / 2);
}

<div
  className="css-8312sn-ListTile__root"
>
  <div
    className="css-1kgtu2h-Flex__root undefined"
  >
    <div
      className="css-iempa9-Flex__item-Flex__equalSpan"
      style={Object {}}
    >
      <div
        className="css-rhrm0e-ListTile__title-ListTile__withMargin"
      >
        Title
      </div>
      <div
        className="css-1wodq5h-ListTile__subtitle"
      >
        Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`ListTile matches snapshot when has a title 1`] = `
.css-1kgtu2h-Flex__root {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.css-8312sn-ListTile__root {
  display: inline-block;
}

.css-12l3x5o-ListTile__title {
  color: #172b4e;
}

.css-iempa9-Flex__item-Flex__equalSpan {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="css-8312sn-ListTile__root"
>
  <div
    className="css-1kgtu2h-Flex__root undefined"
  >
    <div
      className="css-iempa9-Flex__item-Flex__equalSpan"
      style={Object {}}
    >
      <div
        className="css-12l3x5o-ListTile__title"
      >
        Title
      </div>
    </div>
  </div>
</div>
`;

exports[`ListTile matches snapshot when has a trailing and leading component 1`] = `
.css-1kgtu2h-Flex__root {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
}

.css-8312sn-ListTile__root {
  display: inline-block;
}

.css-1nr0qeo-ListTile__leading {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 8px;
}

.css-1vo6ywr-ListTile__trailing {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
}

.css-12l3x5o-ListTile__title {
  color: #172b4e;
}

.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.css-iempa9-Flex__item-Flex__equalSpan {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="css-8312sn-ListTile__root"
>
  <div
    className="css-1kgtu2h-Flex__root undefined"
  >
    <div
      className="css-19bskwp-Flex__item"
      style={Object {}}
    >
      <div
        className="css-1nr0qeo-ListTile__leading"
      >
        <button
          className="css-qq01sn-Button__root"
        >
          Leading
        </button>
      </div>
    </div>
    <div
      className="css-iempa9-Flex__item-Flex__equalSpan"
      style={Object {}}
    >
      <div
        className="css-12l3x5o-ListTile__title"
      >
        Title
      </div>
    </div>
    <div
      className="css-19bskwp-Flex__item"
      style={Object {}}
    >
      <div
        className="css-1vo6ywr-ListTile__trailing"
      >
        <button
          className="css-qq01sn-Button__root"
        >
          Trailing
        </button>
      </div>
    </div>
  </div>
</div>
`;
